# StoryLoom

./: .gitignore  LICENSE  MYSELF.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/desktop/: index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
examples/man_gandom_hamed/: story-config.yaml
examples/man_gandom_hamed/chapters/: chapter-01-زمستان.md
examples/man_gandom_hamed/characters/: gandam.md  حامد.md  نویسنده.md  گندم.md
examples/man_gandom_hamed/locations/: اسلو.md
examples/man_gandom_hamed/reports/: plot-holes-2026-06-25.md  what-if-chapter-01-------.md
examples/man_gandom_hamed/world/: writing-style.md
examples/sample-novel/: .env.example  .gitignore  README.md  story-config.yaml
examples/sample-novel/chapters/: chapter-01-arrival.md
examples/sample-novel/characters/: marcus.md  sarah.md
examples/sample-novel/items/: silver-key.md
examples/sample-novel/locations/: old-mansion.md
examples/sample-novel/reports/: graph.mmd  plot-holes-2026-06-24.md
examples/sample-novel/world/: northern-kingdom-lore.md
examples/test/: story-config.yaml
examples/test/chapters/: chapter-01-jhoi.md
examples/test/characters/: jhoi.md  test.md  تست.md
examples/test/locations/: cave-of-light.md  pk.md  (+1 more)
scripts/: build-api-sidecar.mjs  desktop-dev.sh
(+39 files in other folders)
