[package]
name = "storyloom-desktop"
version = "0.1.0"
description = "StoryLoom desktop app"
authors = ["StoryLoom"]
edition = "2021"

[lib]
name = "storyloom_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
